fixed tablet todo wrapping

--- a/public/style.css
+++ b/public/style.css
@@ -68,13 +68,16 @@ body {
     margin-top: 15px;
 }
 
-.mobile-todo-label {
+.todo-label {
     height: auto;
 }
 
 .problem-box {
     height: 100%;
     box-sizing: content-box;
+}
+
+.mob-problem-box {
     border-bottom-left-radius: 0;
 }
 
